<?xml version="1.0" encoding="utf-8"?>
<!--
  ~
  ~ Copyright 2017 Michael A Updike
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.help.HelpActivity"
    tools:showIn="@layout/activity_help">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            style="@style/HelpTitleView"
            android:text="@string/help_title_feedback"
            />

        <com.weebly.opus1269.clipman.ui.views.VectorDrawableTextView
            android:id="@+id/emailQuestion"
            style="@style/HelpItemView"
            app:drawableLeftCompat="@drawable/ic_email_black_24dp"
            android:text="@string/help_email_question"
            android:tag="@string/help_email_question_tag"
            />

        <View style="@style/HelpDivider"/>

        <com.weebly.opus1269.clipman.ui.views.VectorDrawableTextView
            android:id="@+id/emailBug"
            style="@style/HelpItemView"
            app:drawableLeftCompat="@drawable/ic_email_black_24dp"
            android:text="@string/help_email_bug"
            android:tag="@string/help_email_bug_tag"
            />

        <View style="@style/HelpDivider"/>

        <com.weebly.opus1269.clipman.ui.views.VectorDrawableTextView
            android:id="@+id/emailFeature"
            style="@style/HelpItemView"
            app:drawableLeftCompat="@drawable/ic_email_black_24dp"
            android:text="@string/help_email_feature"
            android:tag="@string/help_email_feature_tag"
            />

        <View style="@style/HelpDivider"/>

        <com.weebly.opus1269.clipman.ui.views.VectorDrawableTextView
            android:id="@+id/emailTranslate"
            style="@style/HelpItemView"
            app:drawableLeftCompat="@drawable/ic_email_black_24dp"
            android:text="@string/help_email_trans"
            android:tag="@string/help_email_trans_tag"
            />

        <View style="@style/HelpDivider"/>

        <com.weebly.opus1269.clipman.ui.views.VectorDrawableTextView
            android:id="@+id/emailGeneral"
            style="@style/HelpItemView"
            app:drawableLeftCompat="@drawable/ic_email_black_24dp"
            android:text="@string/help_email_general"
            android:tag="@string/help_email_general_tag"
            />

        <View style="@style/HelpDivider"/>

        <com.weebly.opus1269.clipman.ui.views.VectorDrawableTextView
            android:id="@+id/githubIssue"
            style="@style/HelpItemView"
            app:drawableLeftCompat="@drawable/github_circle"
            android:text="@string/help_github_issue"
            android:tag="@string/help_github_issue_tag"
            />

        <View
            style="@style/HelpDivider"
            android:layout_marginLeft="0dp"
            android:layout_marginStart="0dp"
            />

        <TextView
            style="@style/HelpTitleView"
            android:text="@string/help_title_documentation"
            />

        <com.weebly.opus1269.clipman.ui.views.VectorDrawableTextView
            android:id="@+id/docApp"
            style="@style/HelpItemView"
            app:drawableLeftCompat="@drawable/github_circle"
            android:text="@string/help_doc_usage"
            android:tag="@string/help_doc_usage_tag"
            />

        <View style="@style/HelpDivider"/>

        <com.weebly.opus1269.clipman.ui.views.VectorDrawableTextView
            android:id="@+id/docRelease"
            style="@style/HelpItemView"
            app:drawableLeftCompat="@drawable/github_circle"
            android:text="@string/help_doc_release"
            android:tag="@string/help_doc_releas_tag_fmt"
            />

        <View style="@style/HelpDivider"/>

        <com.weebly.opus1269.clipman.ui.views.VectorDrawableTextView
            android:id="@+id/docSource"
            style="@style/HelpItemView"
            app:drawableLeftCompat="@drawable/github_circle"
            android:text="@string/help_doc_source"
            android:tag="@string/help_doc_source_tag"
            />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
