<?xml version="1.0" encoding="utf-8"?>
<!--
  ~
  ~ Copyright 2017 Michael A Updike
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn=".ui.clipviewer.ClipViewerActivity"
    tools:context=".ui.clipviewer.ClipViewerActivity"
    >

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom"/>

    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_favorite_border_black_24dp"
        android:title="@string/action_favorite"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_search_web"
        android:icon="@drawable/search_web"
        android:title="@string/action_search_web"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/ic_content_copy_black_24dp"
        android:title="@string/action_copy"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom"/>

</menu>