<?xml version="1.0" encoding="utf-8"?>
<!--
  ~
  ~ Copyright 2017 Michael A Updike
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/activity_layout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:weightSum="5"
              tools:context=".ui.main.MainActivity"
              tools:showIn="@layout/activity_sign_in">

    <ScrollView android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/google_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="@dimen/g_top_margin"
                android:contentDescription="@string/desc_google_icon"
                android:src="@drawable/googleg_color"/>

            <TextView
                android:id="@+id/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/signin_title"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"/>

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signed_out"
                android:gravity="center_horizontal"
                android:textAppearance="@style/TextAppearance.AppCompat"/>

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                tools:text="aaa.@bbb.com"
                android:gravity="center_horizontal"
                android:textAppearance="@style/TextAppearance.AppCompat"/>

            <TextView
                android:id="@+id/error_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fadeScrollbars="true"
                android:gravity="center"
                android:padding="10dp"
                android:scrollbars="vertical"
                tools:text="something went awry\n\n\noh well"
                android:textAppearance="@style/TextAppearance.AppCompat"/>

        </LinearLayout>

    </ScrollView>


    <RelativeLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="?attr/signInButtonsBackground">

        <LinearLayout
            android:id="@+id/sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/common_signin_button_text"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/sign_out_and_disconnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="gone"
            tools:visibility="visible">

            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_out"
                tools:ignore="ButtonStyle"/>

            <Button
                android:id="@+id/revoke_access_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/disconnect"
                tools:ignore="ButtonStyle"/>
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
